   SciMoz's wrapper frame, which is often focused instead of SciMoz itself.
 - Fixed an issue where the caret would sometimes drift when redoing.
 - Adjusted the Vietnamese localization's messages to be consistent with Firefox
   and Thunderbird.
 - Web developers can now disable AVIM within a specific textbox by setting its
   "ime-mode" CSS property to "disabled".
 - Fixed an issue in SeaMonkey where AVIM's toolbar buttons would appear without
   any icons.

Version 20080728.334 (Sunday, July 5, 2009)
 - Added support for Bespin 0.2.1 ("Cheeky Cirrus") and above, including
   non-Mozilla installations.
 - Added support for Songbird 1.2.
 - "Ddau+" is now treated as a misspelled word.
 - Fixed an issue where "gin`" would not become "gi`n".
 - Fixed an issue in Windows and Linux where options in the options pane were
   not enabled and disabled correctly.
 - Fixed an issue where the Restore to Default button was always enabled, even
   when the ignored IDs list was already set to the default.

Version ${Version} (${Date})
 - Added experimental support for Microsoft Silverlight 2 and above. AVIM now
   works in standard Silverlight textboxes. However, applets written with
   managed code are not supported.
 - When "dd" (or "d9" for VNI) is entered immediately after a number, the "dd"
   now turns into the dong sign.
 - Improved word boundary detection. Even with the Enforce Spelling option
   enabled, Vietnamese words can be typed immediately after any punctuation, as
   well as next to words in Chinese and other languages that do not use spaces.
 - Added a new finger-friendly preferences panel for Fennec 1.0.
 - Fixed an issue where opening the options pane would clear the ignored IDs
   list.
 - Fixed an issue where a backslash would not be treated as a word boundary.
 - VIQR and VIQR* dead keys can now be escaped using a backslash when the Auto
   input method is active.
 - AVIM's logo is now displayed in the Add-ons window even when the extension is
   disabled.