@@ -67,7 +67,7 @@
 			<Description>
 				<em:id>{a463f10c-3994-11da-9945-000d60ca027b}</em:id>
 				<em:minVersion>2.0pre</em:minVersion>
-				<em:maxVersion>2.0.*</em:maxVersion>
+				<em:maxVersion>2.5.*</em:maxVersion>
 			</Description>
 		</em:targetApplication>
 		
