@@ -293,7 +293,9 @@ Version ${Version} (${Date})
  - Added a new finger-friendly preferences panel for Fennec 1.0.
  - Fixed an issue where opening the options pane would clear the ignored IDs
    list.
- - Fixed an issue where a backslash would not be treated as a word boundary.
+ - Fixed an issue where a backslash was not treated as a word boundary.
+ - Added support for placing a combining tilde over the letter G in "Ng" (case-
+   sensitive), for abbreviating "Nguye^~n".
  - VIQR and VIQR* dead keys can now be escaped using a backslash when the Auto
    input method is active.
  - AVIM's logo is now displayed in the Add-ons window even when the extension is
